crates/term/tests/storybook/snapshots/chrome__border_rounded_with_title.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
..................
.╭rnd───────╮.....
.│content   │.....
.╰──────────╯.....
..................
