crates/term/tests/storybook/snapshots/chrome__border_single_no_title.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
..................
.┌──────────┐.....
.│content   │.....
.└──────────┘.....
..................
