crates/term/tests/storybook/snapshots/chrome__border_top_only_no_corners.snap
---
source: crates/tui/tests/storybook/mod.rs
expression: frame.text()
---
..................
.─top────────.....
.content     .....
.            .....
..................
